--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: "Vivi Feathers's New Blog"
+title: "Vivi Feathers's Blog"
 author: "Vivi Feathers"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "I currently work as a statistical SAS programmer for a pharmaceutical consulting company while oversee the programming team for a clinical research study at Havard Medical School.
+I am also finishing up my master of statistics degree in NCSU." 
 
-# Email / Social media user names used by the minima theme:
-# All of these are optional and can be removed or commented out
 email: "vlfeathe@ncsu.edu"
-#twitter_username: "twitteruser"
 github_username: "ViviFeathers"
-#linkedin_username: "linkedinuser"
+linkedin_username: "[linkedinuser](https://www.linkedin.com/in/vivi-feathers/)"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
