--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 title: "Vivi Feathers's Blog"
 author: "Vivi Feathers"
-description: "I currently work as a statistical SAS programmer for a pharmaceutical consulting company while oversee the programming team for a clinical research study at Havard Medical School.
-I am also finishing up my master of statistics degree in NCSU." 
+description: "Statistical SAS Programmer" 
 
 email: "vlfeathe@ncsu.edu"
 github_username: "ViviFeathers"
-linkedin_username: "[linkedinuser](https://www.linkedin.com/in/vivi-feathers/)"
+linkedin_username: "vivi-feathers"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
